# project-init

./: '  .gitattributes  .gitignore  .gitmodules  .pi.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Config.toml  Justfile  LICENSE  MANPAGE.md  README.md  TODO.md  appveyor.yml  build.rs  default.nix  examples  release.nix  rustfmt.toml
bash/: bench  build_all  manpage
ci/: before_deploy.ps1  before_deploy.sh  script.sh
examples/: Config.toml  Vimscript.toml
examples/cookiecutter-haskell/: cookiecutter.json
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/: .travis.yml  default.nix  {{cookiecutter.project_slug}}.cabal
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/app/: Main.hs
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/bash/: mkCompletions
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/bench/: Bench.hs
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/src/: Lib.hs
examples/cookiecutter-haskell/{{cookiecutter.project_slug}}/test/: Spec.hs
examples/cookiecutter-py/: cookiecutter.json
examples/cookiecutter-py/{{cookiecutter.project_slug}}/: .gitignore  setup.py
examples/cookiecutter-rust/: cookiecutter.json
examples/cookiecutter-rust/{{cookiecutter.project_slug}}/: Cargo.toml  LICENSE  README.md
examples/cookiecutter-vim/: cookiecutter.json
examples/haskell/: template.toml
examples/haskell/bash/: mkCompletions
examples/haskell/src/: Lib.hs
examples/haskell/test/: Spec.hs
examples/plugin-vim/: LICENSE
examples/rust-lib/: template.toml
examples/vim-plugin/: LICENSE  README.md  template.toml  vimball.txt
idk/: .gitignore  .travis.yml  README.md  default.nix  idk.cabal
idk/app/: Main.hs
idk/src/: Yesod.hs
idk/web-src/hamlet/: index.hamlet
ion/: build_all  manpages  mkRelease  test-all  testbench  upload
man/: MANPAGE.md  pi.1
new/: README.md
new/cmd/test-new/: main.go
plugin-vim/: Cargo.toml  README.md
project/: Project.idr  README.md  project.ipkg
project/Project/: project.idr
search-vim/: LICENSE  vimball.txt
something/: Cargo.toml  README.md
something-vim/: LICENSE  README.md
somethingf/: Cargo.toml  README.md
src/: includes.rs  lib.rs  main.rs  options-en.yml  render.rs  repo.rs  types.rs
src/includes/: AllRightsReserved  BSD  MIT  plain.toml
src/includes/ats/: .atsfmt.toml  .clang-format  .ctags  .gitignore  .travis.yml  atspkg.dhall  pkg.dhall  project.dats  shake.hs  template.toml
src/includes/elm/: .ctags  .gitignore  elm-package.json  template.toml
src/includes/elm/src/: State.elm  Update.elm  View.elm  main.elm
src/includes/elm/test/: TestSuite.elm  elm-package.json  main.elm
src/includes/haskell/: .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .yamllint  CHANGELOG.md  appveyor.yml  cabal.project  cabal.project.local  default.nix  project.cabal  release.nix  stack.yaml  template.toml
src/includes/haskell/app/: Main.hs
src/includes/haskell/bench/: Bench.hs
src/includes/haskell/src/: Lib.hs
src/includes/haskell/test/: Spec.hs
src/includes/idris/: .ctags  .gitignore  Spec.idr  template.toml  {{ Project }}.idr  {{ project }}.ipkg  {{ project }}_test.ipkg
src/includes/idris/{{ Project }}/: Lib.idr
src/includes/julia-lib/: .travis.yml  REQUIRE  template.toml
src/includes/julia-lib/src/: {{ Project }}.jl
src/includes/julia-lib/test/: test.jl
src/includes/kmett/: project.cabal
src/includes/licenses/: BSD3  GPL3
src/includes/madlang/: .ctags  gambling.mad  template.toml
src/includes/miso/: .gitignore  shake.hs  stack-shake.yaml  stack.yaml  template.toml  {{ project }}.cabal
src/includes/miso/src/: Lib.hs
src/includes/miso/web-src/: index.html
src/includes/pux/: .gitignore  index.html  psc-package.json
src/includes/python/: .gitignore  bin.py  setup.py  template.toml
src/includes/reco/: .gitignore  README.md  default.rules  main.go  template.toml
src/includes/reco/cmd/test-reco/: main.go
src/includes/rust/: .gitignore  .travis.yml  Cargo.toml  Cargo.toml.init  benches.rs.init  template.toml
src/includes/vim/: .gitignore  .travis.yml  template.toml  vimball.txt
vim-example/: template.toml
vim-plugin/: vimball.txt
