[package]
name = "project_init"
version = "3.1.23"
authors = ["Vanessa McHale <vamchale@gmail.com>"]
description = "Quickly initialize projects from a template."
license-file = "LICENSE"
exclude = [ "./.gitignore" ]
readme = "README.md"
repository = "https://github.com/vmchale/project-init"
documentation = "https://github.com/vmchale/project-init#README"
homepage = "https://github.com/vmchale/project-init"
build = "build.rs"

[build-dependencies]
cli-setup = "0.2"

[profile.release]
lto = true

[dependencies]
heck = "0.3"
case = "1.0"
toml = "0.5"
colored = "1.6"
clap = {version = "2.29", features = ["yaml"]}
time = "0.1"
rustache-lists = "0.1.0"
serde_derive = "1.0"
serde = "1.0"
text_io = "<= 0.1.6"
git2 = "0.10"
tempdir = "0.3"
dirs = "2.0"

[[bin]]
name = "pi"
path = "src/main.rs"
