[package]
name = "project_init"
version = "3.1.23"
authors = ["Vanessa McHale <vamchale@gmail.com>"]
description = "Quickly initialize projects from a template."
license-file = "LICENSE"
exclude = [ "./.gitignore" ]
readme = "README.md"
repository = "https://github.com/vmchale/project-init"
documentation = "https://github.com/vmchale/project-init#README"
homepage = "https://github.com/vmchale/project-init"
build = "build.rs"

[build-dependencies]
cli-setup = "0.2"

[profile.release]
lto = true

[dependencies]
heck = "0.4"
case = "1.0"
toml = "0.7"
colored = "2.0"
clap = {version = "2.29", features = ["yaml"]}
time = "0.3"
rustache-lists = "0.1.0"
serde_derive = "1.0"
serde = "1.0"
text_io = "<0.2"
git2 = "0.18"
auth-git2 = "0.5.0"
tempdir = "0.3"
dirs = "5.0"

[[bin]]
name = "pi"
path = "src/main.rs"
