name:                idk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/idk#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foundation
  --other-modules:       Db.AcidState
  --                   , Backend
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , acid-state
  default-language:    Haskell2010
  default-extensions:  TypeFamilies
                     , OverloadedStrings

executable idk
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , idk
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/idk
