name:                {{cookiecutter.project_slug}}
version:             {{cookiecutter.version}}
-- synopsis:
-- description:
homepage:            https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}#readme
license:             {{cookiecutter.license}}
license-file:        LICENSE
author:              {{cookiecutter.full_name}}
maintainer:          {{cookiecutter.email}}
copyright:           Copyright: (c) {{cookiecutter.year }} {{cookiecutter.full_name}}
--category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable {{cookiecutter.project_slug}}
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , {{cookiecutter.project_slug}}
  default-language:    Haskell2010

test-suite {{cookiecutter.project_slug}}-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , {{cookiecutter.project_slug}}
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark {{cookiecutter.project_slug}}-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , {{cookiecutter.project_slug}}
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
