name:                {{ project }}
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/{{ project }}#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vanessa.mchale@reconfigure.io
copyright:           Copyright: (c) 2017 Vanessa McHale
--category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , miso == 0.4.*
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

executable {{ project }}
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , {{ project }}
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

source-repository head
  type:     git
  location: https://github.com/vmchale/{{ project }}
